[package]
name = "fixed_ring_buffer"
version = "0.1.0"
authors = ["尚效飞 <sxfworks@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "*"
futures = "0.3.12"
bytes = "1"
async-std = { version = "1.6.0", features = ["attributes"] }
futures-lite = "^1.0"