[package]
name = "async_buffer"
version = "0.1.0"
authors = ["fas <sxfworks@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed_ring_buffer = "0.1.0"
byteorder = "1.4.2"
futures = "0.3.12"
bytes = "1"
async-std = { version = "1.6.0", features = ["attributes"] }
futures-lite = "^1.0"
